--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <h1 class="hero-title fade-in-up">Excellence in Education</h1>
-                    <p class="hero-subtitle fade-in-up">Nurturing Future Leaders Since Our Inception</p>
+                    <p class="hero-subtitle fade-in-up">Nurturing Future Leaders with Islamic Values and Modern Education</p>
                     <div class="hero-buttons fade-in-up">
                         <a href="admissions.html" class="btn btn-primary">Apply Now</a>
                         <a href="about.html" class="btn btn-secondary">Learn More</a>
@@ -54,7 +54,7 @@
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <h1 class="hero-title fade-in-up">Inspiring Minds</h1>
-                    <p class="hero-subtitle fade-in-up">Building Character, Shaping Futures</p>
+                    <p class="hero-subtitle fade-in-up">Building Character Through Knowledge, Wisdom, and Faith</p>
                     <div class="hero-buttons fade-in-up">
                         <a href="academics.html" class="btn btn-primary">Explore Programs</a>
                         <a href="facilities.html" class="btn btn-secondary">View Facilities</a>
@@ -129,13 +129,13 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Domjur Public School stands as a beacon of educational excellence, committed to nurturing young minds and preparing them for a bright future. Our institution combines traditional values with modern teaching methodologies to create a holistic learning environment.</p>
-                    <p>We believe in fostering critical thinking, creativity, and character development alongside academic excellence. Our dedicated faculty and state-of-the-art facilities ensure that every student receives the best possible education.</p>
+                    <p>Domjur Public School stands as a beacon of educational excellence, committed to nurturing young minds and preparing them for a bright future. Our institution combines Islamic values and ethics with modern teaching methodologies to create a holistic learning environment.</p>
+                    <p>We believe in fostering critical thinking, creativity, and character development alongside academic excellence. Guided by Islamic principles of knowledge, compassion, and integrity, our dedicated faculty and state-of-the-art facilities ensure that every student receives the best possible education.</p>
                     <a href="about.html" class="btn btn-outline">Learn More About Us</a>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder" style="background: linear-gradient(135deg, rgba(30, 58, 138, 0.8), rgba(59, 130, 246, 0.6)), url('https://images.unsplash.com/photo-1562774053-701939374585?w=800&q=80') center/cover;">
-                        <div style="position: relative; z-index: 2; text-align: center; color: white; padding: 2rem;">
+                    <div class="image-placeholder" style="background: url('https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=1200&q=95&auto=format&fit=crop') center/cover;">
+                        <div style="position: relative; z-index: 1; text-align: center; color: white; padding: 2rem; background: rgba(0, 0, 0, 0.3); border-radius: 20px;">
                             <i class="fas fa-school" style="font-size: 4rem; margin-bottom: 1rem; opacity: 0.9;"></i>
                             <p style="font-size: 1.2rem; font-weight: 600;">Our Campus</p>
                         </div>
@@ -179,10 +179,10 @@
                 </div>
                 <div class="program-card">
                     <div class="program-icon">
-                        <i class="fas fa-palette"></i>
+                        <i class="fas fa-book-quran"></i>
                     </div>
-                    <h3>Arts & Humanities</h3>
-                    <p>Nurturing creativity and critical thinking through arts and literature.</p>
+                    <h3>Islamic Studies & Values</h3>
+                    <p>Comprehensive Islamic education integrated with character development and moral values.</p>
                     <a href="academics.html" class="program-link">Learn More <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                         <i class="fas fa-heart"></i>
                     </div>
                     <h3>Holistic Development</h3>
-                    <p>Focus on physical, mental, and emotional well-being of every student.</p>
+                    <p>Focus on physical, mental, emotional, and spiritual well-being of every student, guided by Islamic values.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
@@ -227,17 +227,17 @@
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <i class="fas fa-globe"></i>
+                        <i class="fas fa-book-quran"></i>
                     </div>
-                    <h3>Global Perspective</h3>
-                    <p>International programs and exchange opportunities for students.</p>
+                    <h3>Islamic Values</h3>
+                    <p>Integration of Islamic ethics, character building, and moral education throughout the curriculum.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
                         <i class="fas fa-handshake"></i>
                     </div>
                     <h3>Community Engagement</h3>
-                    <p>Strong partnerships with parents and the local community.</p>
+                    <p>Strong partnerships with parents and the local community, fostering a sense of unity and service.</p>
                 </div>
             </div>
         </div>
