--- a/gallery.html
+++ b/gallery.html
@@ -201,73 +201,73 @@
 
             <div class="gallery-grid">
                 <div class="gallery-item" data-category="academics">
-                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=600&q=80" alt="Students in Classroom" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=800&q=95&auto=format&fit=crop" alt="Middle School Students in Classroom" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="sports">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&q=80" alt="Sports Activities" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&q=95&auto=format&fit=crop" alt="Middle School Sports Activities" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="events">
-                    <img src="https://images.unsplash.com/photo-1511578314322-379afb476865?w=600&q=80" alt="School Event" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1529390079861-591de354faf5?w=800&q=95&auto=format&fit=crop" alt="Middle School Event" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="facilities">
-                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?w=600&q=80" alt="School Building" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?w=800&q=95&auto=format&fit=crop" alt="Middle School Building" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="academics">
-                    <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?w=600&q=80" alt="Science Lab" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?w=800&q=95&auto=format&fit=crop" alt="Middle School Science Lab" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="sports">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&q=80" alt="Basketball Court" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&q=95&auto=format&fit=crop" alt="Middle School Basketball" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="events">
-                    <img src="https://images.unsplash.com/photo-1497633762265-9d179a990aa6?w=600&q=80" alt="Library" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1497633762265-9d179a990aa6?w=800&q=95&auto=format&fit=crop" alt="Middle School Library" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="facilities">
-                    <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=600&q=80" alt="Computer Lab" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=800&q=95&auto=format&fit=crop" alt="Middle School Computer Lab" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="academics">
-                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=600&q=80" alt="Students Learning" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=800&q=95&auto=format&fit=crop" alt="Middle School Students Learning" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="sports">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&q=80" alt="Sports Day" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&q=95&auto=format&fit=crop" alt="Middle School Sports Day" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="events">
-                    <img src="https://images.unsplash.com/photo-1511578314322-379afb476865?w=600&q=80" alt="Cultural Event" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1529390079861-591de354faf5?w=800&q=95&auto=format&fit=crop" alt="Middle School Cultural Event" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="facilities">
-                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?w=600&q=80" alt="School Campus" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?w=800&q=95&auto=format&fit=crop" alt="Middle School Campus" loading="lazy">
                     <div class="gallery-overlay">
                         <i class="fas fa-search-plus"></i>
                     </div>
