--- a/DomjurPublicSchool/about.html
+++ b/DomjurPublicSchool/about.html
@@ -50,12 +50,12 @@
             <div class="content-section">
                 <h2>Our Story</h2>
                 <p>Domjur Public School was established in 1999 with a vision to provide quality education that nurtures young minds and prepares them for the challenges of tomorrow. Over the past 25 years, we have grown from a small institution to a leading educational establishment, serving thousands of students and their families.</p>
-                <p>Our journey has been marked by continuous innovation, academic excellence, and a commitment to holistic development. We believe that education is not just about academic achievement, but about shaping well-rounded individuals who can contribute meaningfully to society.</p>
+                <p>Our journey has been marked by continuous innovation, academic excellence, and a commitment to holistic development. Rooted in Islamic values and principles, we believe that education is not just about academic achievement, but about shaping well-rounded individuals with strong moral character, ethical values, and a deep sense of responsibility who can contribute meaningfully to society.</p>
             </div>
 
             <div class="content-section">
                 <h2>Our Mission</h2>
-                <p>To provide a comprehensive, high-quality education that empowers students to achieve their full potential academically, socially, and personally. We strive to create a nurturing environment where every student feels valued, supported, and inspired to excel.</p>
+                <p>To provide a comprehensive, high-quality education that empowers students to achieve their full potential academically, socially, and personally. Guided by Islamic principles of seeking knowledge, compassion, justice, and excellence, we strive to create a nurturing environment where every student feels valued, supported, and inspired to excel.</p>
                 <p>We are committed to:</p>
                 <ul style="list-style: none; padding-left: 0;">
                     <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">
@@ -68,11 +68,11 @@
                     </li>
                     <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">
                         <i class="fas fa-check-circle" style="position: absolute; left: 0; color: var(--primary-color);"></i>
-                        Nurturing creativity and innovation
+                        Instilling Islamic values, ethics, and moral character
                     </li>
                     <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">
                         <i class="fas fa-check-circle" style="position: absolute; left: 0; color: var(--primary-color);"></i>
-                        Building character and ethical values
+                        Building character through compassion, integrity, and respect
                     </li>
                     <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">
                         <i class="fas fa-check-circle" style="position: absolute; left: 0; color: var(--primary-color);"></i>
@@ -83,7 +83,7 @@
 
             <div class="content-section">
                 <h2>Our Vision</h2>
-                <p>To be recognized as a premier educational institution that produces confident, capable, and compassionate individuals who are prepared to lead and succeed in an ever-changing world. We envision a school where learning is joyful, meaningful, and transformative.</p>
+                <p>To be recognized as a premier educational institution that produces confident, capable, and compassionate individuals who are prepared to lead and succeed in an ever-changing world. Rooted in Islamic values and principles, we envision a school where learning is joyful, meaningful, and transformative—where students develop not only academic excellence but also strong moral character, ethical leadership, and a deep commitment to serving humanity.</p>
             </div>
 
             <div class="content-section">
@@ -93,43 +93,43 @@
                         <div class="feature-icon">
                             <i class="fas fa-handshake"></i>
                         </div>
-                        <h3>Integrity</h3>
-                        <p>We uphold the highest standards of honesty, ethics, and moral conduct in all our actions and decisions.</p>
+                        <h3>Integrity (Amanah)</h3>
+                        <p>We uphold the highest standards of honesty, ethics, and moral conduct in all our actions and decisions, guided by Islamic principles of trustworthiness and responsibility.</p>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">
                             <i class="fas fa-heart"></i>
                         </div>
-                        <h3>Respect</h3>
-                        <p>We value and honor the dignity, diversity, and unique contributions of every individual in our community.</p>
+                        <h3>Compassion (Rahmah)</h3>
+                        <p>We value and honor the dignity, diversity, and unique contributions of every individual in our community, showing kindness and mercy to all.</p>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">
-                            <i class="fas fa-lightbulb"></i>
+                            <i class="fas fa-book"></i>
                         </div>
-                        <h3>Excellence</h3>
-                        <p>We strive for continuous improvement and excellence in all aspects of education and school life.</p>
+                        <h3>Knowledge (Ilm)</h3>
+                        <p>We believe in the pursuit of knowledge as a sacred duty, striving for excellence in all aspects of education and encouraging lifelong learning.</p>
+                    </div>
+                    <div class="feature-item">
+                        <div class="feature-icon">
+                            <i class="fas fa-balance-scale"></i>
+                        </div>
+                        <h3>Justice (Adl)</h3>
+                        <p>We promote fairness, equality, and justice in all our interactions, ensuring every student receives equal opportunities and treatment.</p>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">
                             <i class="fas fa-users"></i>
                         </div>
-                        <h3>Collaboration</h3>
-                        <p>We believe in the power of working together to achieve common goals and support each other's growth.</p>
-                    </div>
-                    <div class="feature-item">
-                        <div class="feature-icon">
-                            <i class="fas fa-seedling"></i>
-                        </div>
-                        <h3>Innovation</h3>
-                        <p>We embrace new ideas, technologies, and methodologies to enhance learning and teaching experiences.</p>
+                        <h3>Unity (Ummah)</h3>
+                        <p>We believe in the power of working together as a community, supporting each other's growth and fostering a sense of belonging.</p>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">
                             <i class="fas fa-globe"></i>
                         </div>
-                        <h3>Global Citizenship</h3>
-                        <p>We prepare students to be responsible global citizens who understand and contribute to the wider world.</p>
+                        <h3>Service (Khidmah)</h3>
+                        <p>We prepare students to be responsible citizens who serve their community and contribute positively to society, following the Islamic tradition of service to others.</p>
                     </div>
                 </div>
             </div>
@@ -148,8 +148,8 @@
                         <p>Our campus features state-of-the-art facilities including modern classrooms, science and computer labs, libraries, sports facilities, and more.</p>
                     </div>
                     <div class="about-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, rgba(30, 58, 138, 0.8), rgba(59, 130, 246, 0.6)), url('https://images.unsplash.com/photo-1562774053-701939374585?w=800&q=80') center/cover;">
-                            <div style="position: relative; z-index: 2; text-align: center; color: white; padding: 2rem;">
+                        <div class="image-placeholder" style="background: url('https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=1200&q=95&auto=format&fit=crop') center/cover;">
+                            <div style="position: relative; z-index: 1; text-align: center; color: white; padding: 2rem; background: rgba(0, 0, 0, 0.3); border-radius: 20px;">
                                 <i class="fas fa-school" style="font-size: 4rem; margin-bottom: 1rem; opacity: 0.9;"></i>
                                 <p style="font-size: 1.2rem; font-weight: 600;">Our Campus</p>
                             </div>
