--- a/DomjurPublicSchool/academics.html
+++ b/DomjurPublicSchool/academics.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="content-section">
                 <h2>Our Academic Philosophy</h2>
-                <p>At Domjur Public School, we believe in providing a well-rounded education that goes beyond textbooks. Our academic programs are designed to foster critical thinking, creativity, and a love for learning. We follow a curriculum that balances traditional knowledge with modern skills, preparing students for success in higher education and beyond.</p>
+                <p>At Domjur Public School, we believe in providing a well-rounded education that goes beyond textbooks. Our academic programs are designed to foster critical thinking, creativity, and a love for learning. We follow a curriculum that integrates Islamic values and ethics with modern educational practices, balancing traditional knowledge with contemporary skills, preparing students for success in higher education and beyond while maintaining strong moral and ethical foundations.</p>
             </div>
 
             <div class="content-section">
@@ -66,6 +66,7 @@
                             <li>Mathematics</li>
                             <li>Science & Environmental Studies</li>
                             <li>Social Studies</li>
+                            <li>Islamic Studies & Values</li>
                             <li>Arts & Crafts</li>
                             <li>Physical Education</li>
                         </ul>
@@ -80,8 +81,9 @@
                             <li>Advanced Mathematics</li>
                             <li>Physics, Chemistry, Biology</li>
                             <li>History & Geography</li>
+                            <li>Islamic Studies & Ethics</li>
                             <li>Computer Science</li>
-                            <li>Foreign Languages</li>
+                            <li>Arabic Language</li>
                             <li>Music & Performing Arts</li>
                         </ul>
                     </div>
@@ -98,6 +100,21 @@
                             <li>Computer Science</li>
                             <li>Physical Education</li>
                             <li>Career Counseling</li>
+                        </ul>
+                    </div>
+                    <div class="program-card">
+                        <div class="program-icon">
+                            <i class="fas fa-book-quran"></i>
+                        </div>
+                        <h3>Islamic Studies & Values</h3>
+                        <p>Comprehensive Islamic education program that teaches Quranic studies, Islamic history, ethics, and values, integrated with character development and moral education.</p>
+                        <ul style="text-align: left; margin-top: 1rem; color: var(--text-light);">
+                            <li>Quranic Studies & Recitation</li>
+                            <li>Islamic History & Civilization</li>
+                            <li>Islamic Ethics & Values</li>
+                            <li>Arabic Language</li>
+                            <li>Character Development</li>
+                            <li>Moral Education</li>
                         </ul>
                     </div>
                     <div class="program-card">
